<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home"
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/home" />

    <item android:title="Bookmark"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:id="@+id/bookmark"/>
</menu>