...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/student"
        android:layout_width="221dp"
        android:layout_height="91dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#E91E63"
        android:elevation="15dp"
        android:fontFamily="@font/lato_bold"
        android:text="Student Access"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:iconGravity="start"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
...
